added elements for responsive website

--- a/index.html
+++ b/index.html
@@ -18,6 +18,26 @@
 		</h2>
 	</div>
 
+	<!-- section 2 -->
+	<!-- What will kids learn-->
+	<div class="section2">
+
+		<h1>What will kids learn?</h1>
+
+		<div class="box" style="background-color:#48C9B0;">
+			<img src="images/lightbulb.png">
+		</div>
+		<div class="box" style="background-color:#AF7AC5;">
+			<img src="images/magic-box.png">
+		</div>
+		<div class="box" style="background-color:#F1948A;">
+			<img src="images/pencil.png">
+		</div>
+		<div class="box" style="background-color:#82E0AA;">
+			<img src="images/chemical-bond.png">
+		</div>
+
+	</div>
 
 </body>
 </html>
