added elements for responsive website

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<!-- Banner -->
 	<div class="banner">
 		<h1>Kogniti</h1>
-		<br>
+		
 		<h2>Once a week enrichment program for <br> 
 			8-12 years old to build <br>
 			creativity, problem-solving & collabration skill
@@ -27,15 +27,42 @@
 		<br>
 		<div class="box" style="background-color:#48C9B0;">
 			<img src="images/lightbulb.png">
+
+			<h1>To take challenges head-on.</h1> 
+
+			<p>56% of the youth feel that the future of the world is doomed. This is because somewhere in the education system, they are not being taught how to deal with challenges.
+			<br><br>
+			In Kogniti, we provided kids with unique challenges everyday to build their habit!</p>
+
+
 		</div>
 		<div class="box" style="background-color:#AF7AC5;">
 			<img src="images/magic-box.png">
+			<h1>First-principles thinking</h1> 
+
+			<p>Kids will learn how to remove all the assumptions and learn to find out facts. <br>
+				<br>
+
+			This is called thinking from first-principles.</p>
+
 		</div>
 		<div class="box" style="background-color:#F1948A;">
 			<img src="images/pencil.png">
+			<h1>Self-efficacy.</h1> 
+
+			<p>Self-efficacy is the belief that we ourselves can affect positive changes in our lives.
+			<br><br>
+			Self-efficacy is the biggest skill to be built in the future generation.</p>
+
 		</div>
 		<div class="box" style="background-color:#82E0AA;">
 			<img src="images/chemical-bond.png">
+			<h1>Collaboration</h1> 
+
+			<p>No one has ever solved complex problems along.Collaboration is the most important skill that we focus on building at Kogniti.
+			<br><br>
+			Children collaborate in teams to solve complex problems.</p>
+
 		</div>
 
 	</div>
