added elements for responsive website

--- a/index.html
+++ b/index.html
@@ -33,8 +33,6 @@
 			<p>56% of the youth feel that the future of the world is doomed. This is because somewhere in the education system, they are not being taught how to deal with challenges.
 			<br><br>
 			In Kogniti, we provided kids with unique challenges everyday to build their habit!</p>
-
-
 		</div>
 		<div class="box" style="background-color:#AF7AC5;">
 			<img src="images/magic-box.png">
@@ -64,6 +62,22 @@
 			Children collaborate in teams to solve complex problems.</p>
 
 		</div>
+
+	</div>
+
+
+	<!--section 3-->
+	<!--How are our sessions conducted?-->
+	<div class="section3">
+		<h1>How are our sessions conducted?</h1>
+		<p>
+			<ul>
+				<li>Students gather up in our zoom session</li>
+				<li>Students are divided into teams</li>
+				<li>Students play the our custom multi-player game in breakout rooms on zoom</li>
+				<li>After the game, session facilitator will help kids self-reflect in groups</li>
+			</ul>
+		</p>
 
 	</div>
 
