--- a/index.html
+++ b/index.html
@@ -8,10 +8,19 @@
 </head>
 <body>
 
-	
 
 	<!-- Banner -->
 	<div class="banner">
+
+		<br>
+		<!-- Nav Bar / Menu -->
+	<div class="nav">
+		<ul>
+			<li><a href="">Home</a></li>
+			<li><a href="">About</a></li>
+			<li><a href="">Contact</a></li>
+		</ul>
+	</div>
 
 		<h1>Kogniti</h1>
 		
