added banner background image

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Kogniti</title>
 	<link rel="stylesheet" type="text/css" href="css/index.css">
+	<link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+
 </head>
 <body>
 
@@ -16,13 +21,13 @@
 		<!-- Nav Bar / Menu -->
 	<div class="nav">
 		<ul>
-			<li><a href="">Home</a></li>
-			<li><a href="">About</a></li>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="approach.html">Approach</a></li>
 			<li><a href="">Contact</a></li>
 		</ul>
 	</div>
 
-		<h1>Kogniti</h1>
+		<h1 class="banner-title">Kogniti</h1>
 		
 		<h2>Once a week enrichment program for <br> 
 			8-12 years old to build <br>
@@ -31,13 +36,25 @@
 	</div>
 	<br><br>
 
+
+	<!-- youtube video -->
+	<h1 class="video-title">Demo Session!!</h1>
+	<div class="video-container">
+		
+		<iframe width="750" height="563" src="https://www.youtube.com/embed/JpQ-g3lzB4M"></iframe>
+
+		<p>Students attended this session1</p>
+
+	</div>
+
+
 	<!-- section 2 -->
 	<!-- What will kids learn-->
 	<div class="section2">
 
 		<h1>What will kids learn?</h1>
 		<br>
-		<div class="box" style="background-color:#48C9B0;">
+		<div class="box" style="background-color:#b8b6b6;">
 			<img src="images/lightbulb.png">
 
 			<h1>To take challenges head-on.</h1> 
@@ -46,7 +63,7 @@
 			<br><br>
 			In Kogniti, we provided kids with unique challenges everyday to build their habit!</p>
 		</div>
-		<div class="box" style="background-color:#AF7AC5;">
+		<div class="box" style="background-color:#a3a3a3;">
 			<img src="images/magic-box.png">
 			<h1>First-principles thinking</h1> 
 
@@ -56,7 +73,7 @@
 			This is called thinking from first-principles.</p>
 
 		</div>
-		<div class="box" style="background-color:#F1948A;">
+		<div class="box" style="background-color:#b8b6b6;">
 			<img src="images/pencil.png">
 			<h1>Self-efficacy.</h1> 
 
@@ -65,7 +82,7 @@
 			Self-efficacy is the biggest skill to be built in the future generation.</p>
 
 		</div>
-		<div class="box" style="background-color:#82E0AA;">
+		<div class="box" style="background-color:#a3a3a3;">
 			<img src="images/chemical-bond.png">
 			<h1>Collaboration</h1> 
 
@@ -93,8 +110,16 @@
 
 	</div>
 
+	<!-- Contact Form -->
+	<div class="contact-us">
+		<h1>Contact Us</h1>
+		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdLMZprjtr97Lnh2-5dhz2d8X4jFjgDN9lCwykUhUM1b2-FNA/viewform?embedded=true" width="640" height="1100" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+	</div>
+
 	<!--section 3-->
 	<!--Approach-->
+
+	<!--
 	<div class="section4">
 		
 		<h1>Approach</h1>
@@ -131,6 +156,7 @@
 
 
 	</div>
+-->
 
 	<footer>
 		<p>We are committed to attracting and supporting students from all backgrounds and experiences irrespective of race, gender, socio-economic status, age, sexual orientation and identity, religion, nationality, culture, ideas (including political perspectives), and methods.</p>
