--- a/index.html
+++ b/index.html
@@ -121,6 +121,34 @@
 		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdLMZprjtr97Lnh2-5dhz2d8X4jFjgDN9lCwykUhUM1b2-FNA/viewform?embedded=true" width="640" height="1100" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 	</div>
 
+
+	<!-- Twitter Threads-->
+
+	<div class="twit1">
+		<h1 class="twitter-title">Our Philosophy</h1>
+		<div class="twit-box" style="background-color:#a3a3a3;">	
+			<div class="twit-box-inside">	
+				<blockquote class="twitter-tweet" data-conversation="none" data-theme="dark"><p lang="en" dir="ltr">Coding is a tool to make a machine understand what you want to do.<br><br>It might or might not become obsolete in the future.<br><br>The greatest gift that we can give children is to instill the love for learning in them, the eagerness to deal with complexity,and to communicate confidently.</p>&mdash; Khyati thakur (@Khyatithakur3) <a href="https://twitter.com/Khyatithakur3/status/1447594545529581568?ref_src=twsrc%5Etfw">October 11, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+			</div>
+		</div>
+		
+		<div class="twit-box" style="background-color:#a3a3a3;">
+			<div class="twit-box-inside">
+				<blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">You have people walking around with all the knowledge of humanity on their phones, but they have no idea how to integrate it. <br><br>We don’t train people in thinking or reasoning<br><br> - <a href="https://twitter.com/DavidEpstein?ref_src=twsrc%5Etfw">@DavidEpstein</a></p>&mdash; Khyati thakur (@Khyatithakur3) <a href="https://twitter.com/Khyatithakur3/status/1438152475744210947?ref_src=twsrc%5Etfw">September 15, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+			</div>
+		</div>
+		<div class="twit-box2" style="background-color:#a3a3a3;">
+			<div class="twit-box-inside">
+				<blockquote class="twitter-tweet" data-conversation="none" data-theme="dark"><p lang="en" dir="ltr">So, before you force your 10-year-old to choose a specialized field, do these things to help your child develop Range and an attitude of exploration and experimentation. <a href="https://t.co/wI3Km0jTSs">pic.twitter.com/wI3Km0jTSs</a></p>&mdash; Khyati thakur (@Khyatithakur3) <a href="https://twitter.com/Khyatithakur3/status/1440864727245021187?ref_src=twsrc%5Etfw">September 23, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+			</div>
+		</div>
+		<div class="twit-box2" style="background-color:#a3a3a3;">
+			<div class="twit-box-inside">
+				<blockquote class="twitter-tweet" data-conversation="none" data-theme="dark"><p lang="en" dir="ltr">How can we incorporate desirable difficulties in our kid&#39;s learning? By using some ways mentioned below.<a href="https://twitter.com/hashtag/eLearning?src=hash&amp;ref_src=twsrc%5Etfw">#eLearning</a> <a href="https://twitter.com/hashtag/education?src=hash&amp;ref_src=twsrc%5Etfw">#education</a> <a href="https://twitter.com/hashtag/edtech?src=hash&amp;ref_src=twsrc%5Etfw">#edtech</a> <a href="https://twitter.com/hashtag/edutwitter?src=hash&amp;ref_src=twsrc%5Etfw">#edutwitter</a> <a href="https://t.co/DUOcyP6XmF">pic.twitter.com/DUOcyP6XmF</a></p>&mdash; Khyati thakur (@Khyatithakur3) <a href="https://twitter.com/Khyatithakur3/status/1437613158051377152?ref_src=twsrc%5Etfw">September 14, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+			</div>
+		</div>
+	</div>
+
 	<!--section 3-->
 	<!--Approach-->
 
