added twitter feeds

--- a/approach.html
+++ b/approach.html
@@ -20,7 +20,7 @@
 			<li><a href="approach.html">Approach</a></li>
 			<li><a href="">Contact</a></li>
 		</ul>
-		
+
 	</div>
 	<br>
 		<br>
@@ -37,18 +37,21 @@
 
 		<div class="Approach_p">
 			<p>
-			The world as we know it is constantly evolving. The problems that were present 100 years ago are not there anymore. Instead, we have bigger problems to solve. A lot of these problems are unknown to us.We can only hope to provide the necessary skills to our kids to enable them to solve for the unknown. 
+			The world as we know it is constantly evolving. The problems that were present 100 years ago are not there anymore. Instead, we have bigger problems to solve. A lot of these problems are unknown to us.
+			We can only hope to provide the necessary skills to our kids to enable them to solve for the unknown.
+ 
 			<br><br>	
 			But how do we do that? How do we build the skills of the future in kids today?
 			<br><br>
 			Well, we wouldn’t exactly know what skills kids would need in the future but we know for sure that in any scenario in the future, kids would definitely need to be able to -
 			<br>
-			
+			<ol>
 				<li>Take challenges head-on</li>
 				<li>Have the belief that they themselves can affect positive change in their own life and,</li>
 				<li>Collaborate with others around them to solve complex problems.</li>
+			</ol>
 			<br>
-			What do we need to build these skills? Practice.
+			What do we need to build these skills? Practice. 
 			<br><br>
 			Kids need to have a safe space to get exposed to constant challenges where they can build the belief in their unique abilities and collaborate with other kids to solve the challenges. And they need to do it again and again and then some more.
 			<br><br>
@@ -56,7 +59,7 @@
 			<br><br>
 			We create complex, unique experiences and provide a safe environment for kids to build the skills to solve the problems of tomorrow.
 			<br><br>
-			Once a week kids log in to our zoom sessions, compete in teams to solve unique challenges post which our trainers help kids to self-reflect on their actions. 
+			Once a week kids log in to our zoom sessions, compete in teams to solve unique challenges post which our trainers help kids to self-reflect on their actions.
 			<br><br>
 			Kogniti is where kids are not scared to take challenges head-on. 
 			<br>
