--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<!-- Banner -->
 	<div class="banner">
 
-		
+		<br>
 		<!-- Nav Bar / Menu -->
 	<div class="nav">
 		<ul>
@@ -60,36 +60,42 @@
 
 			<h1>To take challenges head-on.</h1> 
 
-			<p>56% of the youth feel that the future of the world is doomed. This is because somewhere in the education system, they are not being taught how to deal with challenges.
-			<br><br>
-			In Kogniti, we provided kids with unique challenges everyday to build their habit!</p>
+			<p>To be able to solve the big problems of the world, kids need to get into the habit of taking challenges head-on. Unfortunately, real challenges are very hard to come by in school life. <br><br>
+
+			At Kogniti, kids will solve complex challenges everyday, eventually building the eagerness and aptitude to take challenges head-on.
+
+			</p>
 		</div>
 		<div class="box" style="background-color:#a3a3a3;">
 			<img src="images/magic-box.png">
 			<h1>First-principles thinking</h1> 
 
-			<p>Kids will learn how to remove all the assumptions and learn to find out facts. <br>
+			<p>The process of boiling things down to their very basics is called reasoning by first principles. <br>
 				<br>
 
-			This is called thinking from first-principles.</p>
+			Through our complex experiences, kids will learn to ground their problem-solving in first principles.</p>
 
 		</div>
 		<div class="box" style="background-color:#b8b6b6;">
 			<img src="images/pencil.png">
 			<h1>Self-efficacy.</h1> 
 
-			<p>Self-efficacy is the belief that we ourselves can affect positive changes in our lives.
+			<p>SSelf-efficacy is the belief that we ourselves can affect positive changes in our lives. Self-efficacy is the biggest skill to be built in the future generation.
 			<br><br>
-			Self-efficacy is the biggest skill to be built in the future generation.</p>
+			Playing games with others and solving complex challenges have shown to increase self-efficacy. 
+			<br><br>
+			At Kogniti, we aim to build self-efficacy in kids.
+			</p>
 
 		</div>
 		<div class="box" style="background-color:#a3a3a3;">
 			<img src="images/chemical-bond.png">
 			<h1>Collaboration</h1> 
 
-			<p>No one has ever solved complex problems along.Collaboration is the most important skill that we focus on building at Kogniti.
+			<p>No one has ever solved complex problems alone. Collaboration is the most important skill that we focus on building at Kogniti.
+
 			<br><br>
-			Children collaborate in teams to solve complex problems.</p>
+			Kids collaborate in teams to play games, solve challenges and become leaders of the real world.</p>
 
 		</div>
 
@@ -103,8 +109,8 @@
 		<p>
 			<ul>
 				<li>Students gather up in our zoom session</li>
-				<li>Students are divided into teams</li>
-				<li>Students play the our custom multi-player game in breakout rooms on zoom</li>
+				<li>They are divided into teams</li>
+				<li>They play our custom multi-player simulations in breakout rooms on zoom</li>
 				<li>After the game, session facilitator will help kids self-reflect in groups</li>
 			</ul>
 		</p>
