added twitter feeds

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			<img src="images/pencil.png">
 			<h1>Self-efficacy.</h1> 
 
-			<p>SSelf-efficacy is the belief that we ourselves can affect positive changes in our lives. Self-efficacy is the biggest skill to be built in the future generation.
+			<p>Self-efficacy is the belief that we ourselves can affect positive changes in our lives. Self-efficacy is the biggest skill to be built in the future generation.
 			<br><br>
 			Playing games with others and solving complex challenges have shown to increase self-efficacy. 
 			<br><br>
